CDPCP-11926 - introduce encryption-user-managed-identity for Azure environment creation
