# cdp-sdk-go/gen/environments/models/create_a_w_s_gov_cloud_environment_request.go
@@ -35,6 +35,9 @@ type CreateAWSGovCloudEnvironmentRequest struct {
 	// Required: true
 	CredentialName *string `json:"credentialName"`
 
+	// Configures the desired custom docker registry for data services.
+	CustomDockerRegistry *CustomDockerRegistryRequest `json:"customDockerRegistry,omitempty"`
+
 	// An description of the environment.
 	Description string `json:"description,omitempty"`
 
@@ -111,6 +114,10 @@ func (m *CreateAWSGovCloudEnvironmentRequest) Validate(formats strfmt.Registry) 
 		res = append(res, err)
 	}
 
+	if err := m.validateCustomDockerRegistry(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateEndpointAccessGatewayScheme(formats); err != nil {
 		res = append(res, err)
 	}
@@ -177,6 +184,25 @@ func (m *CreateAWSGovCloudEnvironmentRequest) validateCredentialName(formats str
 
 	if err := validate.Required("credentialName", "body", m.CredentialName); err != nil {
 		return err
+	}
+
+	return nil
+}
+
+func (m *CreateAWSGovCloudEnvironmentRequest) validateCustomDockerRegistry(formats strfmt.Registry) error {
+	if swag.IsZero(m.CustomDockerRegistry) { // not required
+		return nil
+	}
+
+	if m.CustomDockerRegistry != nil {
+		if err := m.CustomDockerRegistry.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("customDockerRegistry")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("customDockerRegistry")
+			}
+			return err
+		}
 	}
 
 	return nil
@@ -366,6 +392,10 @@ func (m *CreateAWSGovCloudEnvironmentRequest) ContextValidate(ctx context.Contex
 		res = append(res, err)
 	}
 
+	if err := m.contextValidateCustomDockerRegistry(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.contextValidateFreeIpa(ctx, formats); err != nil {
 		res = append(res, err)
 	}
@@ -401,6 +431,27 @@ func (m *CreateAWSGovCloudEnvironmentRequest) contextValidateAuthentication(ctx 
 				return ve.ValidateName("authentication")
 			} else if ce, ok := err.(*errors.CompositeError); ok {
 				return ce.ValidateName("authentication")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *CreateAWSGovCloudEnvironmentRequest) contextValidateCustomDockerRegistry(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.CustomDockerRegistry != nil {
+
+		if swag.IsZero(m.CustomDockerRegistry) { // not required
+			return nil
+		}
+
+		if err := m.CustomDockerRegistry.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("customDockerRegistry")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("customDockerRegistry")
 			}
 			return err
 		}
