# cdp-sdk-go/gen/environments/models/custom_docker_registry_response.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// CustomDockerRegistryResponse The configured custom docker registry for data services.
+//
+// swagger:model CustomDockerRegistryResponse
+type CustomDockerRegistryResponse struct {
+
+	// The CRN of the configured custom docker registry for data services on the environment.
+	// Required: true
+	Crn *string `json:"crn"`
+}
+
+// Validate validates this custom docker registry response
+func (m *CustomDockerRegistryResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCrn(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CustomDockerRegistryResponse) validateCrn(formats strfmt.Registry) error {
+
+	if err := validate.Required("crn", "body", m.Crn); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this custom docker registry response based on context it is used
+func (m *CustomDockerRegistryResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CustomDockerRegistryResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CustomDockerRegistryResponse) UnmarshalBinary(b []byte) error {
+	var res CustomDockerRegistryResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
