# cdp-sdk-go/gen/environments/models/update_azure_encryption_resources_request.go
@@ -29,6 +29,9 @@ type UpdateAzureEncryptionResourcesRequest struct {
 	// The name or CRN of the environment.
 	// Required: true
 	Environment *string `json:"environment"`
+
+	// User managed identity for encryption.
+	UserManagedIdentity string `json:"userManagedIdentity,omitempty"`
 }
 
 // Validate validates this update azure encryption resources request
